# teaclave-testing

./: Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml  ci.yml
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
proc_macro/src/tests/: mod.rs  should_panic.rs
src/: lib.rs
tester/: Cargo.toml
tester/src/: main.rs
tests/sgx/: CMakeLists.txt  README.md
tests/sgx/app/: CMakeLists.txt  Cargo.toml
tests/sgx/app/src/: main.rs
tests/sgx/cmake/: git.cmake  sgx.cmake
tests/sgx/enclave/: CMakeLists.txt  Cargo.toml  enclave.config.xml  enclave.edl
tests/sgx/enclave/src/: lib.rs
tests/sgx/hello-world/: Cargo.toml
tests/sgx/hello-world/src/: hello.rs  ignore.rs  lib.rs  panicking.rs
tests/sgx/hi/: Cargo.toml  README.md
tests/sgx/hi/src/: main.rs
