[package]
name = "testing_proc_macro"
version = "0.0.1"
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "1.0", features = ["full"] }

[dependencies.regex]
version             = "=1.3.9"
default-features    = false
features            = ["std", "unicode"]
