[package]
name = "enclave"
version = "1.0.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
sgx_tstd  = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.2" }

[dependencies.wheel]
package = "hello-world"
path = "../hello-world"
features = ["with-testing"]
